@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: counter.test,v 1.4 2001/08/02 16:38:06 andreas_kupries Exp $
+# RCS: @(#) $Id: counter.test,v 1.5 2003/04/24 18:45:45 andreas_kupries Exp $
 
 package require tcltest
 namespace import -force ::tcltest::*
@@ -215,3 +215,6 @@ test counter-countReset {counter::reset} {
     counter::reset simple
     counter::get simple
 } {0}
+
+
+::tcltest::cleanupTests
